[package]
name = "usher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "usher"
path = "src/main.rs"
test = false

[lib]
name = "usher"
path = "src/lib.rs"

[dependencies]
enumset = "1.1.7"
pretty_assertions = "1.4.1"
thiserror = "2.0.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
datatest-stable = "0.3.2"

[[test]]
name = "test_scripts"
harness = false

